--- a/pages/ds_page/ds_index.css
+++ b/pages/ds_page/ds_index.css
@@ -9,7 +9,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url('../../dict/images/RI_sunset.jpg');
+    background-image: url('../../dict/images/RIsunset.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
