--- a/pages/education/education.css
+++ b/pages/education/education.css
@@ -9,7 +9,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url('../../dict/images/boston.jpg');
+    background-image: url('./boston.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
